--- a/cultural/cultural.html
+++ b/cultural/cultural.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="cultural.css">
-    <link rel="stylesheet" href="header-footer.css">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../lib/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
