--- a/introduce-react/introduce-react.html
+++ b/introduce-react/introduce-react.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About React</title>
+    <title>Giới thiệu React</title>
     <!-- fontawesome -->
 
     <link rel="stylesheet" href="http://kit-pro.fontawesome.com/releases/v5.12.0/css/pro.min.css">
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- wrapper -->
     <div class="wrapper">
         <!-- header -->
@@ -30,8 +35,8 @@
                     <ul class="menu">
                         <li><a href="/home-demo/home-demo.html" class="menu-btn">Trang chủ</a></li>
                         <li><a href="/introduce-react/introduce-react.html" class="menu-btn">Giới thiệu</a></li>
-                        <li><a href="/introduce-company/introduce-company.html" class="menu-btn">Văn hóa</a></li>
-                        <li><a href="/cultural/cultural.html" class="menu-btn">Tuyển dụng</a></li>
+                        <li><a href="/cultural/cultural.html" class="menu-btn">Văn hóa</a></li>
+                        <li><a href="/introduce-company/introduce-company.html" class="menu-btn">Tuyển dụng</a></li>
                         <li><a href="#" class="menu-btn">Đào tạo & Sự kiện</a></li>
                         <li><a href="#" class="menu-btn">Vì cộng đồng</a></li>
                         <li><a href="#" class="menu-btn">Tin tức & Blog</a></li>
@@ -216,11 +221,7 @@
         <!-- end footer -->
     </div>
     <!-- end wrapper -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 
 </body>
 
