--- a/introduce-react/introduce-react.html
+++ b/introduce-react/introduce-react.html
@@ -218,6 +218,83 @@
         </div>
         <!-- end main -->
         <!-- footer -->
+        <div class="footer">
+            <div class="container">
+                <div class="row footer__inner">
+                    <!-- col-4 -->
+                    <div class="col-4">
+                        <div class="footer__left">
+                            <div class="footer__logo">
+                                <a href=""><img src="./images/logo.png" alt=""></a>
+                            </div>
+                            <br>
+                            <br>
+                            <br>
+                            <div class="footer__left__address">Tầng 7, Golden Field Building,<br /> 24 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội</div>
+                        </div>
+                    </div>
+                    <!-- end col-4 -->
+                    <!-- col-8 -->
+                    <div class="col-8">
+                        <div class="footer__right">
+                            <div class="container">
+                                <div class="row footer__right__inner">
+                                    <!-- col-3 -->
+                                    <div class="col-3 footer__col-3__resp">
+                                        <ul>
+                                            <li class="footer__right__title">Cộng đồng</li>
+                                            <li class="footer__right__list">Đào tạo & Sự kiện</li>
+                                            <li class="footer__right__list">Vì cộng đồng</li>
+                                            <li class="footer__right__list">Tin tức & Blog</li>
+                                        </ul>
+                                    </div>
+                                    <!-- end col-3 -->
+                                    <!-- col-3 -->
+                                    <div class="col-3 footer__col-3__resp">
+                                        <ul>
+                                            <li class="footer__right__title">Công ty</li>
+                                            <li class="footer__right__list">Giới thiệu</li>
+                                            <li class="footer__right__list">Văn hóa</li>
+                                            <li class="footer__right__list">Tuyển dụng</li>
+                                        </ul>
+                                    </div>
+                                    <!-- end col-3 -->
+                                    <!-- col-3 -->
+                                    <div class="col-3 footer__col-3__resp">
+                                        <ul>
+                                            <li class="footer__right__title">Liên hệ</li>
+                                            <li class="footer__right__list"><i class="fas fa-phone-alt"></i>0349177306</li>
+                                            <li class="footer__right__list"><i class="fas fa-envelope"></i>contact@reactplus.jp</li>
+                                        </ul>
+                                    </div>
+                                    <!-- end col-3 -->
+                                    <!-- col-3 -->
+                                    <div class="col-3 footer__col-3__resp">
+                                        <ul>
+                                            <li class="footer__right__title">Kết nối với chúng tôi</li>
+                                            <li class="footer__right__list__mxh">
+                                                <i class="fab fa-facebook"></i>
+                                                <i class="fab fa-linkedin"></i>
+                                                <i class="fab fa-youtube"></i>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <!-- end col-3 -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end col-8 -->
+                </div>
+                <!-- footer bottom -->
+                <div class="row footer__bottom__inner">
+                    <div class="col-12">
+                        <div class="footer__bottom__reserved">© React Plus, JSC 2021. All rights reserved.</div>
+                    </div>
+                </div>
+                <!-- end footer bottom -->
+            </div>
+        </div>
         <!-- end footer -->
     </div>
     <!-- end wrapper -->
