--- a/introduce-company/introduce-company.html
+++ b/introduce-company/introduce-company.html
@@ -10,13 +10,9 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="introduce-company.css">
     <link rel="stylesheet" href="../css/common.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,8 +40,8 @@
             </nav>
         </div>
         <script>
-            $(document).ready(function () {
-                $(".menu-btn").click(function () {
+            $(document).ready(function() {
+                $(".menu-btn").click(function() {
                     $(".navbar .menu").toggleClass("active");
                     $(".menu-btn i").toggleClass("active");
                 });
@@ -58,15 +54,12 @@
             <!-- section title -->
             <div class="section-title">
                 <div class="section-title-left">
-                    <h2>React Plus<br>
-                        Công ty chuyên về React lớn nhất tại Việt nam</h2>
-                    <p>React (React.js) là thư viện Javascript để xây dựng UI vượt trội, được phát triển bởi
-                        Facebook.<br>
-                        React Native là framework xây dựng ứng dụng di động native. Với React Native, chỉ cần 1 ngôn
-                        ngữ<br> Javascript duy nhất để xây dựng ứng dụng iOS và Android.<br>
-                        Hiện nay, React & React Native đang được Facebook đầu tư phát triển mạnh với những cập nhật<br>
-                        liên tục, nó còn được hỗ trợ bởi sự đóng góp từ các cá nhân và công ty trên khắp thế giới
-                        như<br> Callstack, Expo, Infinite Red, Microsoft và Software Mansion.</p>
+                    <h2>React Plus<br> Công ty chuyên về React lớn nhất tại Việt nam</h2>
+                    <p>React (React.js) là thư viện Javascript để xây dựng UI vượt trội, được phát triển bởi Facebook.
+                        <br> React Native là framework xây dựng ứng dụng di động native. Với React Native, chỉ cần 1 ngôn ngữ
+                        <br> Javascript duy nhất để xây dựng ứng dụng iOS và Android.<br> Hiện nay, React & React Native đang được Facebook đầu tư phát triển mạnh với những cập nhật<br> liên tục, nó còn được hỗ trợ bởi sự đóng góp từ các cá nhân và công
+                        ty trên khắp thế giới như
+                        <br> Callstack, Expo, Infinite Red, Microsoft và Software Mansion.</p>
                 </div>
                 <div class="section-title-right">
                     <img src="images/Frame.png" alt="">
@@ -77,18 +70,15 @@
             <div class="section-icon">
                 <div class="section-icon-block">
                     <img src="images/multiple-11 2.png" alt="">
-                    <p>Quy mô 130 nhân sự.<br>
-                        Năm tới sẽ gấp đôi.</p>
+                    <p>Quy mô 130 nhân sự.<br> Năm tới sẽ gấp đôi.</p>
                 </div>
                 <div class="section-icon-block">
                     <img src="images/shinto 1.png" alt="">
-                    <p>Nhiều khách hàng lớn tại Nhật Bản.<br>
-                        Dự án làm không xuể.</p>
+                    <p>Nhiều khách hàng lớn tại Nhật Bản.<br> Dự án làm không xuể.</p>
                 </div>
                 <div class="section-icon-block">
                     <img src="images/edit-curves 1.png" alt="">
-                    <p>Tốc độ phát triển 120%.<br>
-                        Đang chuẩn bị lên sàn.</p>
+                    <p>Tốc độ phát triển 120%.<br> Đang chuẩn bị lên sàn.</p>
                 </div>
             </div>
             <!--End Section icon-->
@@ -108,20 +98,14 @@
                         <img src="images/Rectangle 1699.png" alt="">
                         <div class="section-main-item">
                             <h2>Sứ mệnh</h2>
-                            <p>Cung cấp chuyên gia về React & React Native<br>
-                                Làm hài lòng khách hàng với chất lượng cao<br>
-                                Tạo ra cộng đồng về React lớn mạnh nhất tại Việt Nam</p>
+                            <p>Cung cấp chuyên gia về React & React Native<br> Làm hài lòng khách hàng với chất lượng cao<br> Tạo ra cộng đồng về React lớn mạnh nhất tại Việt Nam</p>
                         </div>
                     </div>
                     <div class="section-paradigm-item">
                         <img src="images/Rectangle 1700.png" alt="">
                         <div class="section-main-item">
                             <h2>Giá trị cốt lõi</h2>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                     </div>
                 </div>
@@ -143,88 +127,56 @@
                                 <img src="images/Rectangle 1743.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1762.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1763.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1764.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1765.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1766.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1767.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                         <div class="section-team-item">
                             <div class="img-box-one">
                                 <img src="images/Rectangle 1768.png" alt="">
                             </div>
                             <h3>Lương Xuân Hải</h3>
-                            <p>Chuyên về React & React Native<br>
-                                Sẵn sàng 24/7<br>
-                                Đẳng cấp thế giới<br>
-                                Khả năng tăng trưởng, mở rộng nhanh<br>
-                                Phản hồi ngay lập tức</p>
+                            <p>Chuyên về React & React Native<br> Sẵn sàng 24/7<br> Đẳng cấp thế giới<br> Khả năng tăng trưởng, mở rộng nhanh<br> Phản hồi ngay lập tức</p>
                         </div>
                     </div>
                 </div>
@@ -235,13 +187,11 @@
                         <h2>Tìm chúng tôi</h2>
                         <div class="section-contact-main">
                             <img src="images/square-pin 1.png" alt="">
-                            <p>Tầng 7, Golden Field Building,<br>
-                                24 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội</p>
+                            <p>Tầng 7, Golden Field Building,<br> 24 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội</p>
                         </div>
                     </div>
                     <div class="section-contact-right">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.8630562362181!2d105.76546330997554!3d21.034875928690457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3134551feb041dbf%3A0xd8ead724ee9a1ff8!2sChung%20c%C6%B0%20Golden%20Field!5e0!3m2!1svi!2s!4v1634654197361!5m2!1svi!2s"
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d782.8630562362181!2d105.76546330997554!3d21.034875928690457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3134551feb041dbf%3A0xd8ead724ee9a1ff8!2sChung%20c%C6%B0%20Golden%20Field!5e0!3m2!1svi!2s!4v1634654197361!5m2!1svi!2s"
                             width="100%" height="340" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
@@ -250,7 +200,85 @@
         </div>
     </main>
     <!-- end main -->
-
+    <!-- footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="row footer__inner">
+                <!-- col-4 -->
+                <div class="col-4">
+                    <div class="footer__left">
+                        <div class="footer__logo">
+                            <a href=""><img src="./images/Logo React Plus-Final-04 1.png" alt=""></a>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="footer__left__address">Tầng 7, Golden Field Building,<br /> 24 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội</div>
+                    </div>
+                </div>
+                <!-- end col-4 -->
+                <!-- col-8 -->
+                <div class="col-8">
+                    <div class="footer__right">
+                        <div class="container">
+                            <div class="row footer__right__inner">
+                                <!-- col-3 -->
+                                <div class="col-3 footer__col-3__resp">
+                                    <ul>
+                                        <li class="footer__right__title">Cộng đồng</li>
+                                        <li class="footer__right__list">Đào tạo & Sự kiện</li>
+                                        <li class="footer__right__list">Vì cộng đồng</li>
+                                        <li class="footer__right__list">Tin tức & Blog</li>
+                                    </ul>
+                                </div>
+                                <!-- end col-3 -->
+                                <!-- col-3 -->
+                                <div class="col-3 footer__col-3__resp">
+                                    <ul>
+                                        <li class="footer__right__title">Công ty</li>
+                                        <li class="footer__right__list">Giới thiệu</li>
+                                        <li class="footer__right__list">Văn hóa</li>
+                                        <li class="footer__right__list">Tuyển dụng</li>
+                                    </ul>
+                                </div>
+                                <!-- end col-3 -->
+                                <!-- col-3 -->
+                                <div class="col-3 footer__col-3__resp">
+                                    <ul>
+                                        <li class="footer__right__title">Liên hệ</li>
+                                        <li class="footer__right__list"><i class="fas fa-phone-alt"></i>0349177306</li>
+                                        <li class="footer__right__list"><i class="fas fa-envelope"></i>contact@reactplus.jp</li>
+                                    </ul>
+                                </div>
+                                <!-- end col-3 -->
+                                <!-- col-3 -->
+                                <div class="col-3 footer__col-3__resp">
+                                    <ul>
+                                        <li class="footer__right__title">Kết nối với chúng tôi</li>
+                                        <li class="footer__right__list__mxh">
+                                            <i class="fab fa-facebook"></i>
+                                            <i class="fab fa-linkedin"></i>
+                                            <i class="fab fa-youtube"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- end col-3 -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end col-8 -->
+            </div>
+            <!-- footer bottom -->
+            <div class="row footer__bottom__inner">
+                <div class="col-12">
+                    <div class="footer__bottom__reserved">© React Plus, JSC 2021. All rights reserved.</div>
+                </div>
+            </div>
+            <!-- end footer bottom -->
+        </div>
+    </div>
+    <!-- end footer -->
 </body>
 
 </html>
