update 3 page lan 2

--- a/introduce-react/introduce-react.html
+++ b/introduce-react/introduce-react.html
@@ -33,10 +33,10 @@
                         <a href="/home-demo/home-demo.html"><img src="./images/logo.png" alt="" /></a>
                     </div>
                     <ul class="menu">
-                        <li><a href="/home-demo/home-demo.html" class="menu-btn">Trang chủ</a></li>
-                        <li><a href="/introduce-react/introduce-react.html" class="menu-btn">Giới thiệu</a></li>
-                        <li><a href="/cultural/cultural.html" class="menu-btn">Văn hóa</a></li>
-                        <li><a href="/introduce-company/introduce-company.html" class="menu-btn">Tuyển dụng</a></li>
+                        <li><a href="/web-react-plus/home-demo/home-demo.html" class="menu-btn">Trang chủ</a></li>
+                        <li><a href="/web-react-plus/introduce-react/introduce-react.html" class="menu-btn">Giới thiệu</a></li>
+                        <li><a href="/web-react-plus/cultural/cultural.html" class="menu-btn">Văn hóa</a></li>
+                        <li><a href="/web-react-plus/introduce-company/introduce-company.html" class="menu-btn">Tuyển dụng</a></li>
                         <li><a href="#" class="menu-btn">Đào tạo & Sự kiện</a></li>
                         <li><a href="#" class="menu-btn">Vì cộng đồng</a></li>
                         <li><a href="#" class="menu-btn">Tin tức & Blog</a></li>
